--- a/EliteMMO.Scripted/EliteMMO.Scripted.csproj
+++ b/EliteMMO.Scripted/EliteMMO.Scripted.csproj
@@ -131,6 +131,7 @@
     <EmbeddedResource Include="Views\ScriptOnEventTool.resx">
       <DependentUpon>ScriptOnEventTool.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
