--- a/EliteMMO.Scripted/EliteMMO.Scripted.csproj
+++ b/EliteMMO.Scripted/EliteMMO.Scripted.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Embedded\SigScan.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\FormSerialisor.cs" />
+    <Compile Include="Embedded\FormSerialisor.cs" />
     <Compile Include="Views\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +120,12 @@
     <Compile Include="Views\ScriptOnEventTool.Designer.cs">
       <DependentUpon>ScriptOnEventTool.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\ScriptSkillup.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\ScriptSkillup.Designer.cs">
+      <DependentUpon>ScriptSkillup.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -144,6 +150,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ScriptOnEventTool.resx">
       <DependentUpon>ScriptOnEventTool.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ScriptSkillup.resx">
+      <DependentUpon>ScriptSkillup.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="EliteMMO.Scripted_TemporaryKey.pfx" />
